--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     right: 0;
     z-index: 2;
     display: flex;
-    height: 80vh;
+    height: 60vh;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -24,8 +24,7 @@ body {
     font-family: "Epilogue", sans-serif;
     font-weight: 300;
     font-size: 15px;
-    margin-left: 30px;
-    margin-right: 30px;
+    text-transform: uppercase;
     letter-spacing: 3px;
     color: aliceblue;
     text-shadow: 0px 0px 5px rgb(0, 0, 0),0px 0px 15px rgb(0, 0, 0);
@@ -36,6 +35,14 @@ body {
     letter-spacing: 3px;
     color: rgb(175, 175, 175);
 }
+.dropdown-menu {
+    background: rgba(224, 214, 214, 0.35);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(224, 214, 214, 0.69);
+    }
 /*For The Video */
 video {
     position: absolute;
@@ -44,6 +51,7 @@ video {
     width: 100%;
     height: 100vh;
     object-fit: cover;
+    opacity: 0.6;
 }
 
 /*Hero Section*/
@@ -55,17 +63,19 @@ video {
     align-items: center;
 }
 .Tagline {
-    font-family: "Epilogue", sans-serif;
-    font-weight: 500;
-    font-size: 24px;
+    font-family: "Young Serif", sans-serif;
+    font-weight: 800;
+    font-size: 40px;
     color: aliceblue;
     text-align: center;
     letter-spacing: 3px;
-    text-shadow: 0px 0px 25px rgb(255, 255, 255);
+    text-shadow: 0px 0px 25px rgb(255, 255, 255),0px 0px 35px rgb(90, 90, 90);
+    text-transform: uppercase;
 }
 .hero-section p {
     font-family: "Epilogue", sans-serif;
     font-weight: 200;
+    font-size: 18px;
     text-align: center;
     max-width: 900px;
 }
@@ -77,10 +87,11 @@ video {
     text-decoration: none;
     color: aliceblue;
     text-transform:uppercase;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(224, 214, 214, 0.35);
     border-radius: 5px;
-    box-shadow: 0 10px 30px rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(224, 214, 214, 0.69);
     padding: 8px 15px 8px 15px;
 }
